--- a/Scraper using RPA into BigQuery (NHFR Case study).ipynb
+++ b/Scraper using RPA into BigQuery (NHFR Case study).ipynb
@@ -13099,7 +13099,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14cc4996",
+   "id": "670f0bbf",
    "metadata": {},
    "source": [
     "### Checking for missing items"
@@ -13108,7 +13108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d41835b",
+   "id": "7eda3b39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13118,7 +13118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "824d0a89",
+   "id": "b3dc3463",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13170,7 +13170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0fc171e",
+   "id": "d6746314",
    "metadata": {},
    "source": [
     "### Perform background check of missing index if it corresponds to the page and page index above"
@@ -13282,13 +13282,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e52ae257",
+   "id": "45877394",
    "metadata": {},
    "outputs": [],
    "source": [
     "### Creating the dictionary\n",
-    "page_index_list = []\n",
-    "for key, value in (page_index_list, page_index):\n",
+    "page_index_list = {}\n",
+    "for key, value in zip(page_index_list, page_index):\n",
     "    if key in page_index_list:\n",
     "        page_index_list[key].append(value)\n",
     "    else:\n",
@@ -13873,7 +13873,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "785c48d1",
+   "id": "49c7e7fd",
    "metadata": {},
    "source": [
     "###### Kindly check if there are still mssing records after running the above, so you might have to rerun all or for just the missing records"
@@ -13881,7 +13881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a13fcca6",
+   "id": "94b038f5",
    "metadata": {},
    "source": [
     "###### You can then merge the main results and missing results to have your complete data"
@@ -13890,7 +13890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "139174cb",
+   "id": "98e9f2fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13899,7 +13899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23790692",
+   "id": "01f0b5da",
    "metadata": {},
    "source": [
     "### Saving your complete data as csv to local"
@@ -14550,7 +14550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59b51307",
+   "id": "9f98c7f7",
    "metadata": {},
    "source": [
     "### Close the RPA framework"
